{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 16,
  "lineage": "f5f23614-aea2-0237-f54f-84ce36d029a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ws-eip-forNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb6824455252fdbe",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-0cb6824455252fdbe",
            "association_id": "eipassoc-05a2159854b1715d0",
            "domain": "vpc",
            "id": "eipalloc-0cb6824455252fdbe",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fd2e166945a7ee51",
            "private_dns": "ip-172-168-1-10.us-east-2.compute.internal",
            "private_ip": "172.168.1.10",
            "public_dns": "ec2-3-135-16-245.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.16.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT"
            },
            "tags_all": {
              "Name": "EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workspace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0abe92aa1ea7330cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abe92aa1ea7330cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0537073de1caeee59",
            "private_dns": "ip-172-168-1-59.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.59",
            "public_ip": "18.119.128.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07693898a66bfd254",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05311e302d1f317a4",
            "tags": {
              "Name": "Dev-instance"
            },
            "tags_all": {
              "Name": "Dev-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01691ad6fd8f0d5f9"
            ]
          },
          "dependencies": [
            "aws_subnet.workspace_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:internet-gateway/igw-0a72bedbc28bd9672",
            "id": "igw-0a72bedbc28bd9672",
            "owner_id": "339713112256",
            "tags": {
              "Name": "PublicIGW"
            },
            "tags_all": {
              "Name": "PublicIGW"
            },
            "vpc_id": "vpc-05562da5034136b04"
          },
          "dependencies": [
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-01cf8535d8be47a7b",
            "tags": {
              "Name": "DEV-vpc-igw"
            },
            "tags_all": {
              "Name": "DEV-vpc-igw"
            },
            "vpc_id": "vpc-05562da5034136b04"
          },
          "dependencies": [
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ws-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb6824455252fdbe",
            "association_id": "eipassoc-05a2159854b1715d0",
            "connectivity_type": "public",
            "id": "nat-0b819a5a00f65dc81",
            "network_interface_id": "eni-0fd2e166945a7ee51",
            "private_ip": "172.168.1.10",
            "public_ip": "3.135.16.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05311e302d1f317a4",
            "tags": {
              "Name": "DEV-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "DEV-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_subnet.workspace_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0392310af429c7539",
            "id": "rtb-0392310af429c7539",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a72bedbc28bd9672",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.168.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b819a5a00f65dc81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "DEV-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05562da5034136b04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-IGW",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.workspace_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0a323a5ff69587710",
            "id": "rtb-0a323a5ff69587710",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a72bedbc28bd9672",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.168.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b819a5a00f65dc81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "DEV-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05562da5034136b04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-IGW",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.workspace_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a336b394e42d143b",
            "route_table_id": "rtb-0392310af429c7539",
            "subnet_id": "subnet-08f08dd69cc65bb30"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-IGW",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-Private-RT",
            "aws_subnet.workspace_subnet",
            "aws_subnet.ws-private_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b596d9dc3f7152fd",
            "route_table_id": "rtb-0a323a5ff69587710",
            "subnet_id": "subnet-05311e302d1f317a4"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-IGW",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-Public-RT",
            "aws_subnet.workspace_subnet",
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workspace_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-05311e302d1f317a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05311e302d1f317a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workspace_subnet"
            },
            "tags_all": {
              "Name": "workspace_subnet"
            },
            "vpc_id": "vpc-05562da5034136b04"
          },
          "dependencies": [
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ws-private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-08f08dd69cc65bb30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f08dd69cc65bb30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workspace_subnet"
            },
            "tags_all": {
              "Name": "workspace_subnet"
            },
            "vpc_id": "vpc-05562da5034136b04"
          },
          "dependencies": [
            "aws_vpc.workspace-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workspace-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:vpc/vpc-05562da5034136b04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-019c0ae2fc102bc89",
            "default_route_table_id": "rtb-0d1d9e7377a2937bd",
            "default_security_group_id": "sg-01691ad6fd8f0d5f9",
            "dhcp_options_id": "dopt-0e363e00aa4ec7887",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05562da5034136b04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1d9e7377a2937bd",
            "owner_id": "339713112256",
            "tags": {
              "Name": "DEV-vpc"
            },
            "tags_all": {
              "Name": "DEV-vpc"
            }
          }
        }
      ]
    }
  ]
}